feat(storage): implement SQLite StorageManager with workspace/tab CRUD

--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@types/node": "^18.19.0",
     "electron": "^28.0.0",
     "typescript": "^5.6.0"
+  },
+  "dependencies": {
+    "@types/better-sqlite3": "^7.6.13",
+    "better-sqlite3": "^12.4.6"
   }
 }
