--- a/package.json
+++ b/package.json
@@ -5,16 +5,35 @@
   "main": "dist/main/index.js",
   "scripts": {
     "build": "tsc",
+    "renderer:build": "webpack --config webpack.config.js",
     "start": "electron .",
-    "dev": "npm run build && electron ."
+    "dev": "npm run build && npm run renderer:build && electron ."
   },
   "devDependencies": {
     "@types/node": "^18.19.0",
-    "electron": "^28.0.0",
-    "typescript": "^5.6.0"
+    "electron": "^28.3.3",
+    "typescript": "^5.6.0",
+    "@types/react": "^18.3.7",
+    "@types/react-dom": "^18.3.2",
+    "@babel/core": "^7.25.0",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.0",
+    "postcss": "^8.4.31",
+    "postcss-loader": "^8.1.1",
+    "autoprefixer": "^10.4.20",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.13",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@types/better-sqlite3": "^7.6.13",
-    "better-sqlite3": "^12.4.6"
+    "better-sqlite3": "^12.4.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "zustand": "^4.5.2"
   }
 }
